minikube/api-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: rest-api
subsets:
  - addresses:
      - ip: 0.0.0.0
    ports:
      - port: 4000
        name: http
        protocol: TCP
