minikube/keydb.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: keydb-0
  labels:
    app: keydb
    name: keydb
    app.kubernetes.io/name: keydb
    app.kubernetes.io/instance: keydb
spec:
  hostname: keydb-0
  subdomain: keydb
  volumes:
    - name: config
      configMap:
        name: keydb-0-config
  containers:
    - name: keydb
      image: eqalpha/keydb:latest
      imagePullPolicy: Always
      ports:
        - name: redis
          containerPort: 6379
      volumeMounts:
        - mountPath: /etc/keydb
          name: config
---
apiVersion: v1
kind: Pod
metadata:
  name: keydb-1
  labels:
    app: keydb
    name: keydb
    app.kubernetes.io/name: keydb
    app.kubernetes.io/instance: keydb
spec:
  hostname: keydb-1
  subdomain: keydb
  volumes:
    - name: config
      configMap:
        name: keydb-1-config
  containers:
    - name: keydb
      image: eqalpha/keydb:latest
      imagePullPolicy: Always
      ports:
        - name: redis
          containerPort: 6379
      volumeMounts:
        - mountPath: /etc/keydb
          name: config

---
apiVersion: v1
kind: Pod
metadata:
  name: keydb-2
  labels:
    app: keydb
    name: keydb
    app.kubernetes.io/name: keydb
    app.kubernetes.io/instance: keydb
spec:
  hostname: keydb-2
  subdomain: keydb
  volumes:
    - name: config
      configMap:
        name: keydb-2-config
  containers:
    - name: keydb
      image: eqalpha/keydb:latest
      imagePullPolicy: Always
      ports:
        - name: redis
          containerPort: 6379
      volumeMounts:
        - mountPath: /etc/keydb
          name: config

---
apiVersion: v1
kind: Service
metadata:
  name: keydb
  labels:
    app: keydb
    name: keydb
    app.kubernetes.io/name: keydb
    app.kubernetes.io/instance: keydb
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: redis
      protocol: TCP
      name: redis
  selector:
    app.kubernetes.io/name: keydb
    app.kubernetes.io/instance: keydb
