minikube/twemproxy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: twem
  labels:
    app: twem
    name: twem
    app.kubernetes.io/name: twem
    app.kubernetes.io/instance: twem
spec:
  replicas: 3
  updateStrategy:
    type: RollingUpdate
  serviceName: twem
  selector:
    matchLabels:
      app.kubernetes.io/name: twem
      app.kubernetes.io/instance: twem
  template:
    metadata:
      labels:
        app.kubernetes.io/name: twem
        app.kubernetes.io/instance: twem
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: twemproxy
          image: ghcr.io/monetr/twemproxy:latest
          imagePullPolicy: Always
          args:
            - "-c"
            - "/tmp/twem/config.yaml"
          ports:
            - name: proxy
              containerPort: 6379
          volumeMounts:
            - mountPath: /tmp/twem
              name: config
        - name: redis
          image: redis:6.2.2-alpine
          imagePullPolicy: Always
          args:
            - "--port"
            - "6000"
          ports:
            - name: redis
              containerPort: 6000
      volumes:
        - name: config
          configMap:
            name: twemproxy-config

---
apiVersion: v1
kind: Service
metadata:
  name: twem
  labels:
    app: twem
    name: twem
    app.kubernetes.io/name: twem
    app.kubernetes.io/instance: twem
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: proxy
      protocol: TCP
      name: proxy
  selector:
    app.kubernetes.io/name: twem
    app.kubernetes.io/instance: twem
