minikube/ui-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: web-ui
subsets:
  - addresses:
      - ip: 0.0.0.0
    ports:
      - port: 30000
        name: http
        protocol: TCP
