minikube/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-ui
  labels:
    app: web-ui
    name: web-ui
    app.kubernetes.io/name: web-ui
    app.kubernetes.io/instance: web-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: web-ui
      app.kubernetes.io/instance: web-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web-ui
        app.kubernetes.io/instance: web-ui
    spec:
      containers:
        - name: web-ui
          image: nginx:1.19.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: web-ui
  labels:
    app: web-ui
    name: web-ui
    app.kubernetes.io/name: web-ui
    app.kubernetes.io/instance: web-ui
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: web-ui
    app.kubernetes.io/instance: web-ui

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-ui
  labels:
    app: web-ui
    name: web-ui
    app.kubernetes.io/name: web-ui
    app.kubernetes.io/instance: web-ui
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "app.monetr.mini"
      http:
        paths:
          - path: /
            backend:
              serviceName: web-ui
              servicePort: 80
