minikube/mailhog.yaml
# $2a$04$TDSJXQZaDYg16U3Xjf.TCO5DlGk6AMPDpgr1HiPnZWL0cyadBLGvi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail
  labels:
    app: mail
    name: mail
    app.kubernetes.io/name: mail
    app.kubernetes.io/instance: mail
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mail
      app.kubernetes.io/instance: mail
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mail
        app.kubernetes.io/instance: mail
    spec:
      containers:
        - name: mail
          image: mailhog/mailhog
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8025
              protocol: TCP
            - name: smtp
              containerPort: 1025
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: mail
  labels:
    app: mail
    name: mail
    app.kubernetes.io/name: mail
    app.kubernetes.io/instance: mail
spec:
  type: ClusterIP
  ports:
    - port: 8025
      targetPort: http
      protocol: TCP
      name: http
    - port: 1025
      targetPort: smtp
      protocol: TCP
      name: smtp
  selector:
    app.kubernetes.io/name: mail
    app.kubernetes.io/instance: mail

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mail
  labels:
    app: mail
    name: mail
    app.kubernetes.io/name: mail
    app.kubernetes.io/instance: mail
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "mail.monetr.mini"
      http:
        paths:
          - path: /
            backend:
              serviceName: mail
              servicePort: 8025
