minikube/pgadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  labels:
    app: pgadmin
    name: pgadmin
    app.kubernetes.io/name: pgadmin
    app.kubernetes.io/instance: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pgadmin
      app.kubernetes.io/instance: pgadmin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pgadmin
        app.kubernetes.io/instance: pgadmin
    spec:
      volumes:
        - name: servers
          configMap:
            name: postgres
        - name: config
          configMap:
            name: pgadmin
        - name: home
          emptyDir: { }
      containers:
        - name: pgadmin
          image: "dpage/pgadmin4"
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /home/pgadmin/servers.json
              name: servers
              subPath: servers.json
            - mountPath: /home/pgadmin/pgpass
              name: servers
              subPath: pgpass
            - mountPath: /pgadmin4/config.py
              name: config
              subPath: config.py
            - mountPath: /home/pgadmin/.pgadmin
              name: home
          ports:
            - name: admin
              containerPort: 9000
          livenessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            tcpSocket:
              port: 9000
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              port: 9000
              path: /login
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  labels:
    app: pgadmin
    name: pgadmin
    app.kubernetes.io/name: pgadmin
    app.kubernetes.io/instance: pgadmin
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: admin
      protocol: TCP
      name: admin
  selector:
    app.kubernetes.io/name: pgadmin
    app.kubernetes.io/instance: pgadmin

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pgadmin
  labels:
    app: pgadmin
    name: pgadmin
    app.kubernetes.io/name: pgadmin
    app.kubernetes.io/instance: pgadmin
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "pgadmin.monetr.mini"
      http:
        paths:
          - path: /
            backend:
              serviceName: pgadmin
              servicePort: 9000
