minikube/registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  labels:
    app: registry
    name: registry
    app.kubernetes.io/name: registry
    app.kubernetes.io/instance: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: registry
      app.kubernetes.io/instance: registry
  template:
    metadata:
      labels:
        app.kubernetes.io/name: registry
        app.kubernetes.io/instance: registry
    spec:
      containers:
        - name: registry
          image: "registry:2.7.1"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: registry
  labels:
    app: registry
    name: registry
    app.kubernetes.io/name: registry
    app.kubernetes.io/instance: registry
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: registry
    app.kubernetes.io/instance: registry

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: registry
  labels:
    app: registry
    name: registry
    app.kubernetes.io/name: registry
    app.kubernetes.io/instance: registry
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
    - host: "registry.monetr.mini"
      http:
        paths:
          - path: /
            backend:
              serviceName: registry
              servicePort: 5000
