minikube/sentry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: relay
    app: relay
  name: relay
spec:
  replicas: 1
  selector:
    matchLabels:
      name: relay
      app: relay
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: relay
        app: relay
    spec:
      volumes:
        - name: config
          configMap:
            name: relay
            optional: false
        - name: projects
          configMap:
            name: relay-projects
            optional: false
        - name: work
          emptyDir: { }
      containers:
        - name: relay
          image: getsentry/relay:07786352f563dce248b23f091f6764efe38dc03c
          imagePullPolicy: Always
          args:
            - run
            - --config
            - /work/.relay
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
          workingDir: /work
          volumeMounts:
            - mountPath: /work/.relay
              name: work

---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: relay
    app: relay
  name: relay
spec:
  ports:
    - name: relay
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    name: relay
    app: relay
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    name: relay
    app: relay
  name: relay
spec:
  rules:
    - host: relay.monetr.mini
      http:
        paths:
          - backend:
              service:
                name: relay
                port:
                  number: 3000
            path: /
            pathType: ImplementationSpecific
