minikube/unleash.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unleash
  labels:
    app: unleash
    name: unleash
    app.kubernetes.io/name: unleash
    app.kubernetes.io/instance: unleash
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: unleash
      app.kubernetes.io/instance: unleash
  template:
    metadata:
      labels:
        app.kubernetes.io/name: unleash
        app.kubernetes.io/instance: unleash
    spec:
      containers:
        - name: unleash
          image: unleashorg/unleash-server
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 4242
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: unleash
  labels:
    app: unleash
    name: unleash
    app.kubernetes.io/name: unleash
    app.kubernetes.io/instance: unleash
spec:
  type: ClusterIP
  ports:
    - port: 4242
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: unleash
    app.kubernetes.io/instance: unleash

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: unleash
  labels:
    app: unleash
    name: unleash
    app.kubernetes.io/name: unleash
    app.kubernetes.io/instance: unleash
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "features.monetr.mini"
      http:
        paths:
          - path: /
            backend:
              serviceName: unleash
              servicePort: 4242
